# charm

./: .gitignore  CLAUDE.md  COMMANDS.md  MONOREPO_STRUCTURE.md  NEXT_STEPS.txt  README.md
.claude/: settings.local.json
backend/: .env.example  API_TESTING_GUIDE.md  CODE_REVIEW_GUIDE.md  QUICK_START.md  READING_ORDER.txt  README.md  interactive_client.py  pyproject.toml  requirements.txt  test_api.sh
backend/chatbot/: admin.py  context_manager.py  handlers.py  intents.py  models.py  serializers.py  urls.py  views.py
backend/chatbot/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/integrations/: admin.py  models.py  services.py  urls.py
backend/integrations/migrations/: 0001_initial.py
